# Quantitative-Portfolio-Management-w-Python

./: .gitignore  pyproject.toml
assignments/: assignment_1.ipynb  assignment_2.ipynb
demo/: optimization_1_with_cvxpy.py
