[project]
name = "quantitative-portfolio-management-w-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.8.1",
    "daqp>=0.7.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "osqp>=1.1.1",
    "pandas>=3.0.1",
    "qpalm>=1.2.6",
    "qpsolvers>=4.10.0",
    "quadprog>=0.1.13",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]
